<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@drawable/border"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_item_photo"
            android:layout_width="120dp"
            android:layout_height="95dp"
            android:layout_marginEnd="8dp"
            android:elevation="8dp"
            app:cardCornerRadius="16dp">

            <ImageView
                android:id="@+id/img_item_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/cover"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/cv_item_photo"
            android:text="@string/title"
            android:textAllCaps="true"
            android:textColor="#2d2d2d"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_item_created"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_title"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@id/cv_item_photo"
            android:text="@string/created_at"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/tv_item_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_item_created"
            android:layout_toEndOf="@id/cv_item_photo"
            android:text="@string/category"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/edit"
            app:backgroundTint="@color/primaryLightColor"
            app:icon="@drawable/ic_baseline_edit_24" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/btn_edit"
            android:background="@drawable/rounded_button"
            android:text="@string/delete"
            app:backgroundTint="#C70000"
            app:icon="@drawable/ic_baseline_delete_24" />
    </RelativeLayout>
</LinearLayout>