<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:textColor="#2d2d2d"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:text="@string/slogan"
            android:textColor="#2d2d2d"
            android:textSize="24sp"
            android:textStyle="italic" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_logo"
            app:civ_border_color="@color/black"
            app:civ_border_width="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:text="@string/created_by"
            android:textSize="24sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/border"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_photo1"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover"
                    android:scaleType="centerCrop"
                    android:src="@drawable/rizki" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_profile_title1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo1"
                android:text="@string/rizki_name"
                android:textAllCaps="true"
                android:textColor="#2d2d2d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile_title1"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo1"
                android:text="@string/rizki_nim"
                android:textColor="#2d2d2d"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/border"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_photo2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover"
                    android:scaleType="centerCrop"
                    android:src="@drawable/anggi" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_profile_title2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo2"
                android:text="@string/anggi_name"
                android:textAllCaps="true"
                android:textColor="#2d2d2d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile_title2"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo2"
                android:text="@string/anggi_nim"
                android:textColor="#2d2d2d"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/border"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_photo3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover"
                    android:scaleType="centerCrop"
                    android:src="@drawable/arif" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_profile_title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo3"
                android:text="@string/arif_name"
                android:textAllCaps="true"
                android:textColor="#2d2d2d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile_title3"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo3"
                android:text="@string/arif_nim"
                android:textColor="#2d2d2d"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/border"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_photo4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover"
                    android:scaleType="centerCrop"
                    android:src="@drawable/fikri" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_profile_title4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo4"
                android:text="@string/fikri_name"
                android:textAllCaps="true"
                android:textColor="#2d2d2d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile_title4"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo4"
                android:text="@string/fikri_nim"
                android:textColor="#2d2d2d"
                android:textStyle="italic" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="8dp"
            android:background="@drawable/border"
            android:padding="8dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_profile_photo5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:elevation="8dp"
                app:cardCornerRadius="16dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/cover"
                    android:scaleType="centerCrop"
                    android:src="@drawable/nurhapiza" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_profile_title5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo5"
                android:text="@string/nurhapiza_name"
                android:textAllCaps="true"
                android:textColor="#2d2d2d"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_profile_title5"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/cv_profile_photo5"
                android:text="@string/nurhapiza_nim"
                android:textColor="#2d2d2d"
                android:textStyle="italic" />
        </RelativeLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>